refactor: 라멘샵 옵션 조회 입력 단순화